fixed overlapping style

--- a/Frontend/src/css/page-layout.css
+++ b/Frontend/src/css/page-layout.css
@@ -15,13 +15,17 @@
   display: none;
 }
 
-.main-feed {
+main {
   padding: 0 0.5rem;
   margin-top: var(--header-height);
 }
 
+.main-aside {
+  display: none;
+}
+
 @media (min-width: 960px) {
-  .main-feed {
+  main {
     width: calc(100% - var(--aside-width));
   }
 
@@ -30,11 +34,12 @@
     position: fixed;
     top: var(--header-height);
     right: 0;
+    display: block;
   }
 }
 
 @media (min-width: 1200px) {
-  .main-feed {
+  main {
     width: calc(100% - var(--aside-width) - var(--nav-width) - 100px);
     max-width: 750px;
     margin-left: auto;
